package strategy;

/**
 * @author ioeah
 * @version 1.0
 * @date 2023/4/6 11:33
 */
public interface TravelStrategy {
    void travel();
}
